# JNU_xslab

Arduino/avr/: Makefile  blink.c  blink.elf  blink.hex
Arduino/avr/1_ioport/: .1_avr_io_output.c.swp  1_avr_io_output.c  1_avr_io_output.elf  1_avr_io_output.hex  2_avr_io_input.c  2_avr_io_input.elf  2_avr_io_input.hex  Makefile
Arduino/avr/2_timer/: 3_avr_timer_ovf.c  3_avr_timer_ovf.elf  3_avr_timer_ovf.hex  4_avr_timer_comp.c  Makefile
Arduino/avr/3_ext-interrupt/: 5_avr_ext_interrupt.c  5_avr_ext_interrupt.elf  5_avr_ext_interrupt.hex  Makefile
SmartFarmST32/: .gitlab-ci.yml  CMakeLists.txt  HOWTOBUILD.md
SmartFarmST32/docs/: 01_protocol.md  02_command_list.md  03_firmware_control.md  04_register.md
SmartFarmST32/extra/doxygen/: Doxyfile.in
SmartFarmST32/extra/ldscripts/: custom_STM32G0B1VETx_FLASH.ld
SmartFarmST32/extra/script/: reg_test.py
SmartFarmST32/include/: led_switch.h  packet_manager.h  protocol.h  sensor_interface_board.h  switch_fan.h  use_sensor.h
SmartFarmST32/lib/segger-rtt/: CMakeLists.txt
SmartFarmST32/lib/stm32g0-hal/: .gitlab-ci.yml  .gitrepo  get_release_notes.sh
SmartFarmST32/src/: board_io.cpp  main.cpp  mxc6655.cpp  onboard_packet_hadnler.cpp  packet_manager.cpp  sensor_interface_board.cpp  stm32g0xx_hal_msp.c  switch_fan.cpp  use_sensor.cpp  util.cpp
SmartFarmST32/toolchain/: arm-linux-gnueabihf-gcc.cmake  armv6-linux-gnueabi-gcc.cmake  toolchain_common.cmake
SmartFarmST32_Master/: CMakeLists.txt
SmartFarmST32_Master/extra/package/: prerm.in
SmartFarmST32_Master/include/: firmware_manager.h  gps_parser.h  protocol.h  sensor_interface_board.h  stm32g0xx_hal_conf.h  system_config.h
SmartFarmST32_Master/lib/segger-rtt/: HOWTOBUILD.md  README.md
SmartFarmST32_Master/lib/stm32g0-hal/: HOWTOBUILD.md  README.md  cliff.toml
SmartFarmST32_Master/src/: firmware_manager.cpp  gps_parser.cpp  main.cpp  protocol.cpp  sensor_interface_board.cpp  tla2528.cpp
SmartFarmST32_Master/toolchain/: aarch64-linux-gnu-gcc.cmake
SmartFarmST32_local_backup/: .gitignore  HOWTOBUILD.md  README.md  build.sh
SmartFarmST32_local_backup/docs/: 05_raspberrypi.md
SmartFarmST32_local_backup/extra/script/: controller.py  rs485_test.py
SmartFarmST32_local_backup/include/: control_interface_board.h  use_sensor.h  util.h
SmartFarmST32_local_backup/lib/stm32g0-hal/: Common.cmake
SmartFarmST32_local_backup/src/: firmware_manager.cpp  led_switch.cpp  main.cpp  sensor_interface_board.cpp  stm32g0xx_it.c  use_sensor.cpp
SmartFarmST32_local_backup/toolchain/: avr-gcc.cmake  x86_64-linux-gnu-gcc.cmake
SmartFarm_DY/: Common.cmake  build_docs.sh
SmartFarm_DY/docs/: 04_register.md
SmartFarm_DY/extra/ldscripts/: custom_STM32G0B1VETx_FLASH.ld
SmartFarm_DY/include/: board_io.h  checksum.h  mxc6655.h  onboard_packet_handler.h  sensor_interface_board.h  tla2528.h
SmartFarm_DY/lib/segger-rtt/: .gitignore  .gitrepo
SmartFarm_DY/lib/stm32g0-hal/: CMakeLists.txt
SmartFarm_DY/src/: checksum.cpp  control_interface_board.cpp  system_config.cpp
SmartFarm_DY/toolchain/: arm-none-eabi-gcc.cmake
helloworld/: CMakeLists.txt  Common.cmake  HOWTOBUILD.md  README.md
helloworld/src/: main.cpp
rpi/: CMakeLists.txt
rpi/doc_notion/: 실습 내용 2f5d5b506ffa807f8e40e999fcc024eb.html
rpi/src/: main.c
(+14 files in other folders)
